--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -41,7 +41,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
   flutter_lints: ^6.0.0
-  test: 1.25.15
+  test: ^1.26.2
 
 flutter_launcher_icons:
   android: 'launcher_icon'
