--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^6.2.2
   uuid: ^4.2.1
   shared_preferences: ^2.1.0
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
