--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   url_launcher: ^6.2.2
   uuid: ^4.2.1
   shared_preferences: ^2.1.0
-  intl: ^0.18.1
+  audioplayers: ^6.0.0
+  vibration: ^1.9.0
+  intl: ^0.19.0
+  provider: ^6.1.1
+  http: ^1.2.0
+  fl_chart: ^0.66.0
+  google_fonts: ^6.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,6 +60,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/sounds/700-hz-beeps-86815.mp3
 
   fonts:
     - family: Inter
