--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.0
   fl_chart: ^0.66.0
   google_fonts: ^6.1.0
+  file_picker: ^5.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
