--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fl_chart: ^0.66.0
   google_fonts: ^6.1.0
   file_picker: ^10.3.8
+  syncfusion_flutter_pdfviewer: ^31.1.19 # or latest version
 dev_dependencies:
   flutter_test:
     sdk: flutter
