--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^6.1.0
   file_picker: ^10.3.8
   syncfusion_flutter_pdfviewer: ^31.1.19 # or latest version
+  flutter_dotenv: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,6 +64,7 @@ flutter:
   assets:
     - assets/images/
     - assets/sounds/700-hz-beeps-86815.mp3
+    - assets/.env
 
   fonts:
     - family: Inter
