add: profile and settings

--- a/mad_project/.gitignore
+++ b/mad_project/.gitignore
@@ -50,3 +50,7 @@ credietntail.txt
 # Firebase / Google Cloud secrets
 *.json
 **/firebase-adminsdk-*.json
+
+# --- ADDED: Secrets & Env Files ---
+.env
+assets/.env
