--- a/mad_project/pubspec.yaml
+++ b/mad_project/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   provider: ^6.1.1
   http: ^1.2.0
+  image: ^4.0.17
   fl_chart: ^0.66.0
   google_fonts: ^6.1.0
   file_picker: ^10.3.8
